WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116240
[Mac] fast/flexbox/auto-height-with-flex.html fails intermittently
https://bugs.webkit.org/show_bug.cgi?id=116240
Summary
[Mac] fast/flexbox/auto-height-with-flex.html fails intermittently
Ryosuke Niwa
Reported
2013-05-16 12:12:50 PDT
fast/flexbox/auto-height-with-flex.html has been failing intermittently on Mac release builders ever since they were added:
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fflexbox%2Fauto-height-with-flex.html
e.g.
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r150193%20(10028)/results.html
Attachments
Patch
(1.87 KB, patch)
2013-05-17 10:37 PDT
,
Dave Hyatt
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-05-16 12:19:06 PDT
http://trac.webkit.org/changeset/150201
Dave Hyatt
Comment 2
2013-05-17 10:37:03 PDT
Created
attachment 202117
[details]
Patch
Darin Adler
Comment 3
2013-05-17 10:43:00 PDT
Comment on
attachment 202117
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202117&action=review
r=me but consider my better if condition
> Source/WebCore/rendering/RenderFlexibleBox.cpp:529 > + if (contentLogicalHeight == LayoutUnit::max()) > + contentLogicalHeight -= borderPaddingAndScrollbar;
This should be: if (contentLogicalHeight > LayoutUnit::max() - borderPaddingAndScrollbar) It’s also awkward to change contentLogicalHeight in place.
Dave Hyatt
Comment 4
2013-05-17 11:40:58 PDT
Fixed in
r150278
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug