fast/flexbox/auto-height-with-flex.html failing only on release builds. https://bugs.webkit.org/show_bug.cgi?id=116240

Reviewed by Darin Adler.

Fix the mainAxisContentExtent method so no overflow occurs, since it
doesn't work right on release builds.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisContentExtent):



Canonical link: https://commits.webkit.org/134700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150278 268f45cc-cd09-0410-ab3c-d52691b4dbfc